manifests/prometheus/high/templates/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  labels: {}
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: /
    haproxy.org/server-proto: "h2"
spec:
  ingressClassName: haproxy-ingress-public
  rules:
    - host: grafana-prod.cs.sandbox.codefresh.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-stack-high-grafana
                port:
                  number: 80
