manifests/prometheus/high/templates/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  labels: {}
  annotations:
    # ingress.kubernetes.io/proxy-body-size: 100M
    # ingress.kubernetes.io/app-root: /
    haproxy.org/server-proto: "h2"
spec:
  ingressClassName: haproxy-ingress-public
  rules:
    - host: prometheus-prod.cs.sandbox.codefresh.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-stack-kube-prom-prometheus
                port:
                  number: 9090
